--- a/styles/main.css
+++ b/styles/main.css
@@ -1,4 +1,4 @@
-/** {
+/* * {
   box-sizing: border-box;
   outline: 1px solid limegreen !important;
 }
@@ -6,7 +6,7 @@
 * {
   box-sizing: border-box;
   background: rgb(0 100 0 / 0.1) !important;
-}*/
+} */
 
 body {
   background-color: bisque;
@@ -20,72 +20,257 @@ body {
 header {
   display: flex;
   justify-content: space-between;
-  position: fixed;
-  z-index: 20;
 }
 
-h1 {
-  padding-left: 3em;
-  font-family:Verdana, Geneva, Tahoma, sans-serif;
+/* h1 {
+  margin-right: 45%;
+  font-family: Verdana, Geneva, Tahoma, sans-serif;
   font-size: 3em;
   font-weight: 700;
-  margin-top: .2em;
-}
+  margin-top: 0.2em;
+  position: fixed;
+  margin-left: 40%;
+  text-align: center;
+} */
 
-h2, h3 {
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+h2,
+h3,
+h4 {
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  text-align: center;
+  padding: 0.5em;
 }
 
 h2 {
-  font-size: 1.2em;
-  padding-bottom: .5em;
+  font-size: 1.3em;
+  font-weight: 700;
+  border-bottom: 2px solid black;
 }
 
 h3 {
   font-size: 1.1em;
-  padding-bottom: .3em;
+  padding-bottom: 1em;
+  font-weight: 600;
 }
 
-.main-nav {
-  
+h4 {
+  font-size: .9em;
+  font-weight: 550;
 }
 
 .main-nav-li {
   display: flex;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-size: 1.2em;
   font-weight: 500;
-  padding: .5em;
+  padding: 0.5em;
   gap: 1.5em;
 }
 
-.container {
-  padding-top: 5em;
+
+
+/*  main section  */
+
+.main-container {
   display: grid;
   grid-template: repeat(8, 1fr) / repeat(12, 1fr);
 }
 
-.properties {
+.prop-container {
   grid-area: 1 / 1 / 9 / 3;
-  padding-left: .5em;
-  font-family: monospace;
-  font-size: 1.3em;
 }
 
 .main-section {
   grid-area: 1 / 3 / 9 / 10;
+  position: sticky;
+  top: 0;
   height: 30em;
-  border: 3px solid black;
+  max-height: 85vh;
+  /* border: 8px solid black; */
+  /* border-radius: 8px; */
+  /* overflow-y: auto; */
 }
 
-.css-editor {
+.frame {
+  width: auto;
+  height: 100%;
+  overflow-y: auto;
+  border: 8px solid black;
+  border-radius: 8px;
+}
+
+.banner {
+  max-height: 12vh;;
+}
+
+.banner h1 {
+  font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  font-size: 3em;
+  font-weight: 900;
+  padding-bottom: .3em;
+  text-align: center;
+}
+
+#test {
+  width: 1000px;
+  height: 200px;
+  margin-top: 15em;
+}
+
+#flex-main-window {
+  outline: 3px solid black;
+}
+
+
+/*  asides  */
+
+aside {
+  margin-top: 3.8em;
+}
+
+.prop-items {
   grid-area: 1 / 10 / 9 / 13;
 }
 
-
-
-.element {
+.items-prop, .container-prop {
   display: flex;
+  flex-direction: column;
+  padding-bottom: 1em;
+}
+
+.properties {
+  font-family: monospace;
+  font-size: 1.3em;
+  border: 1px solid black;
+  margin-left: 0.3em;
+  margin-right: 0.3em;
+  padding-left: 0.3em;
+  padding-right: 0.3em;
+  box-shadow: inset 0px 0px 4px 3px rgba(0, 0, 0, 0.8);
+  border-radius: 5px;
+}
+
+fieldset {
+  display: flex;
+  flex-direction: row;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-size: .7em;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  padding-top: 1em;
+  padding-bottom: 1em;
+  border-top: 1px solid black;
+  border-bottom: 1px solid black;
+  margin-bottom: 1em;
+}
+
+table {
+  width: 100%;
+}
+
+/* tr {
+  border: 1px solid black;
+  box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 0.5);
+} */
+
+input[type="number"] {
+  width: 4em;
+}
+
+td {
+  padding: .4em .2em;
+  width: max-content;
+}
+
+label {
+  margin-left: .3em;
+}
+
+.container-prop select {
+  width: 80%;
+  margin-left: 2em;
+  /* margin-top: .2em; */
+}
+
+td:first-child {
+  width: fit-content;
+  text-align: end;
+}
+
+.table-cont-prop {
+  text-align: left !important;
+}
+
+.table-cont-prop:nth-child(odd) {
+  padding: .6em 0 0;
+}
+/* .table-cont-prop:nth-child(even) {
+  margin: 0;
+  padding: .2em 0 0;
+} */
+
+.gap {
+  border-top: 1px solid black;
+}
+
+.button-pos-mid {
+  text-align: center !important;
+  color: aqua;
+}
+
+.button-pos-mid button {
+  padding: .4em;
+  width: 65%;
+}
+
+
+
+/*  add-items  */
+
+.add-item {
+  border: 2px solid black;
+  padding: .2em;
+}
+
+.item-button {
+  padding: 0.2em .4em;
+  margin: 0.3em 0;
+  border: 1px solid black;
+  box-shadow: inset 0px 0px 5px 2px rgba(0, 0, 0, 0.5);
+}
+
+
+
+/*  avatar  */
+
+.avatar-window {
+  width: auto;
+  border: 2px solid black;
+  margin-top: 1em;
+  display: flex;
+  flex-wrap: wrap;
+  /* background-color: black; */
+}
+
+.avitem {
+  padding: 0.4em .4em;
+  margin: 0.2em 0.2em;
+  border: 1px solid red;
+  display: none;
+}
+
+.avitem:hover {
+  cursor: default;
+}
+
+
+
+
+/*  elements  */
+
+.item {
+  display: none;
   height: 4em;
   width: 4em;
   border: 2px solid red;
@@ -93,9 +278,24 @@ h3 {
   justify-content: center;
 }
 
-.element p {
-  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+.item p {
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
   font-size: 1.3em;
 }
 
 
+
+
+/*  buttons  */
+
+button:hover {
+  cursor: pointer;
+}
+
+
+
+/*  footer  */
+
+footer {
+  height: 100px;
+}
